Fix for BISERVER-6035 UI Update - Data Source Wizard - Preview on CSV step needs new scrollbars

--- a/pentaho-xul-gwt/src/org/pentaho/ui/xul/public/xul.css
+++ b/pentaho-xul-gwt/src/org/pentaho/ui/xul/public/xul.css
@@ -252,7 +252,6 @@ legend {
 
 .xul-pre {
   font-family: "Lucida Console", Monaco, monospace;
-  overflow: scroll;
   background: white;
   height: 100%;
   width: 100%;
